--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -2112,7 +2112,7 @@
       <property name="font">
        <font>
         <family>Times New Roman</family>
-        <pointsize>16</pointsize>
+        <pointsize>15</pointsize>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
@@ -2127,16 +2127,16 @@
      <widget class="QLabel" name="label_33">
       <property name="geometry">
        <rect>
-        <x>520</x>
+        <x>500</x>
         <y>4</y>
-        <width>111</width>
+        <width>121</width>
         <height>16</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Times New Roman</family>
-        <pointsize>16</pointsize>
+        <pointsize>15</pointsize>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
@@ -2160,7 +2160,7 @@
       <property name="font">
        <font>
         <family>Times New Roman</family>
-        <pointsize>16</pointsize>
+        <pointsize>15</pointsize>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
@@ -2236,7 +2236,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -2275,7 +2275,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -2298,7 +2298,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -2766,7 +2766,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -2805,7 +2805,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -2828,7 +2828,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -3295,7 +3295,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -3333,7 +3333,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -3355,7 +3355,7 @@
        <property name="font">
         <font>
          <family>Courier New</family>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
          <weight>75</weight>
          <italic>true</italic>
          <bold>true</bold>
@@ -4435,7 +4435,7 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>2</x>
