--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -4588,7 +4588,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>417</y>
+        <y>405</y>
         <width>221</width>
         <height>21</height>
        </rect>
@@ -4610,7 +4610,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>465</y>
+        <y>457</y>
         <width>231</width>
         <height>18</height>
        </rect>
@@ -4634,7 +4634,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>454</y>
+        <y>444</y>
         <width>232</width>
         <height>16</height>
        </rect>
@@ -4647,7 +4647,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>436</y>
+        <y>427</y>
         <width>221</width>
         <height>21</height>
        </rect>
@@ -4687,16 +4687,19 @@
        <string>Всего</string>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>21</y>
         <width>241</width>
-        <height>401</height>
+        <height>381</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_56">
+       <property name="spacing">
+        <number>1</number>
+       </property>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_36">
          <property name="spacing">
@@ -4756,7 +4759,7 @@
              <item>
               <widget class="QGroupBox" name="groupBox_2">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+                <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -4771,7 +4774,7 @@
                <property name="title">
                 <string>Фильтр</string>
                </property>
-               <widget class="QWidget" name="">
+               <widget class="QWidget" name="layoutWidget">
                 <property name="geometry">
                  <rect>
                   <x>3</x>
@@ -4979,6 +4982,12 @@
              </item>
              <item>
               <widget class="QGroupBox" name="groupBox">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="font">
                 <font>
                  <pointsize>13</pointsize>
